# my-domains

./: .gitignore  Cargo.toml  README.md  servers.json
src/: fetch_whois.rs  lib.rs  main.rs  render.rs  server.rs
templates/: domains.html
tests/: integration_tests.rs
